@@ -21,7 +21,7 @@ dnl Inc., 51 Franklin Street - Fifth Floor, Boston, MA 02110-1301, USA.
 
 AC_PREREQ(2.50)
 AC_INIT([GNU DejaGnu], 1.5.1, [bug-dejagnu@gnu.org])
-AM_INIT_AUTOMAKE
+AM_INIT_AUTOMAKE([1.14 subdir-objects])
 AM_MAINTAINER_MODE
 AC_PROG_MAKE_SET
 
